# perseus-lite

./: .envrc  .gitignore  CLAUDE.md  ERRORS.md  flake.nix  treefmt.nix  treefmt.toml  typos.toml
.github/: CODEOWNERS  filters-firmware.yaml
.github/workflows/: all.yaml  firmware.yaml  static.yml
docs/source/: conf.py  hardware-index.md  index.md  systems-index.md
docs/source/_static/css/: theme.css
docs/source/development/: documentation-index.md
docs/source/development/environment/: github.md  nix.md
docs/source/development/software/: aruco_detection.md  local-localisation.md  robot-description.md  web-ui.md
docs/source/home/: getting-started.md  nix-basics.md
docs/source/home/perseus-lite-operation/: basic-operation.md
docs/source/standards/: github.md
docs/source/standards/software/: cpp.md  typescript.md
docs/source/systems/: ci-cd.md  documentation.md  hardware-index.md  st3215-protocol.md
docs/source/systems/hardware/: i2c_imu.md  network.md
docs/source/systems/software/: cmake.md  core.md  scripts.md  web-ui.md
docs/source/tutorials/: rplidar-testing.md  running-simulation.md  web-ui-widgets.md
firmware/RSBL85-driver/src/: main.cpp
firmware/arm-driver/src/: main.cpp
nix/: nixpkgs-overlays.nix  workspaces.nix
software/ros_ws/: overlay.nix  patches.nix
software/ros_ws/nix-packages/: crater-exit.nix  overlay.nix  perseus-autonomy-bridge.nix  perseus-interfaces.nix  perseus-lite-explorer.nix  perseus-lite-hardware.nix  perseus-lite-screen.nix  perseus-lite-simulation.nix  perseus-lite-tui.nix  perseus-lite-voice.nix  perseus-vision.nix  shell.nix
software/ros_ws/src/crater_exit/: README.md  package.xml
software/ros_ws/src/perseus_lite_explorer/: CMakeLists.txt  package.xml
software/ros_ws/src/perseus_lite_explorer/config/: explorer_params.yaml
software/ros_ws/src/perseus_lite_explorer/launch/: perseus_lite_roam.launch.py
software/ros_ws/src/perseus_lite_explorer/src/: frontier_explorer.cpp
software/ros_ws/src/perseus_lite_screen/: CMakeLists.txt  README.md  package.xml
software/ros_ws/src/perseus_lite_screen/config/: eglfs_kms.json  screen_params.yaml
software/ros_ws/src/perseus_lite_screen/launch/: perseus_lite_screen.launch.py
software/ros_ws/src/perseus_lite_screen/scripts/: disable-boot-self-drive.sh  enable-boot-self-drive.sh  install-kiosk.sh  perseus-lite-display-modload.conf  perseus-lite-screen-kiosk  perseus-lite-screen.service  perseus-self-drive-boot.service  perseus-self-drive-countdown  perseus-self-drive-roam-launch
software/ros_ws/src/perseus_lite_screen/src/: main.cpp  map_screen_node.cpp  map_screen_node.hpp  map_view_widget.cpp  map_view_widget.hpp
software/ros_ws/src/perseus_lite_voice/: README.md  package.xml  setup.cfg  setup.py
software/ros_ws/src/perseus_lite_voice/config/: voice_params.yaml
software/ros_ws/src/perseus_lite_voice/launch/: perseus_lite_voice.launch.py
software/ros_ws/src/perseus_lite_voice/perseus_lite_voice/: intents.py  listener.py  ollama_client.py  speaker.py  speech_text.py  vision.py  voice_node.py  wake_listener.py
software/ros_ws/third-party-packages/: overlay.nix
software/scripts/: overlay.nix
software/scripts/cachix/: all-aarch64.sh  all.sh  build.sh  docs-shell.sh  shell.sh
software/shared/: overlay.nix
software/system-manager/: configuration.nix  default.nix  system.nix
software/templates/cmake_snippets/: 16-include_local_lib.cmake  22-link_private.cmake  23-link_public.cmake  README.md
(+63 files in other folders)
